samples/_failures_safe/1761343369_9a5836_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34bc66b6.c:166: error: expected ‘;’, ‘,’ or ‘)’ at end of input
